--- a/styles/globals.css
+++ b/styles/globals.css
@@ -134,10 +134,5 @@ a {
   stroke-width: 6;
 }
 .shadow-input{
-  box-shadow:  inset -4px -4px 10px rgba(58, 58, 58, 0.7);
-  filter: blur(13.5914px);
-}
-.shadow-div{
-  box-shadow:  inset 4px 4px 10px rgba(0, 0, 0, 0.7);
-  
+ background: url('../public/assets/images/landing/input.svg');
 }
