--- a/styles/globals.css
+++ b/styles/globals.css
@@ -99,7 +99,12 @@ a {
   display: flex;
   padding: 0;
 }
-
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none !important;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
 .line {
   fill: none;
   stroke: #FFA31A;
@@ -146,3 +151,147 @@ a {
  .shadow-inside{
    filter: blur(3px) !important;
  }
+
+ /* .range {
+  width: 111px;
+  height: 7px;
+  -webkit-appearance: none;
+  background: #111;
+  outline: none;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 1);
+}
+
+.range::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 10px;
+  position: absolute;
+  height: 10px;
+  border-radius: 50%;
+  background: url('../public/assets/images/requirements/slider.svg');
+  cursor: pointer;
+  border: 4px solid #333;
+  box-shadow: -407px 0 0 400px #745FEA;
+} */
+
+
+.child{
+	width: 100%;
+	position: relative;
+}
+#range{
+	width: 111px;
+  border-radius: 10px;
+  
+}
+.slide1{
+	/* background: #745FEA; */
+	width: 60px;
+	height: 60px;
+	displaY:grid;
+	place-items:center;
+	font-weight: bold;
+	font-size: 18px;
+/* color: #222f3e; */
+	position: absolute;
+	top: calc(50%);
+	cursor: pointer;
+	left: 0px;
+	transform: translate(-50%,-50%);
+	
+	border-radius: 50%;
+	z-index: 0;
+}
+input[type=range] {
+  -webkit-appearance: none;
+  width: 100%;
+	position: relative;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  /* box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; */
+  background: #745FEA;
+  border-radius: 10px;
+  /* border: 0.2px solid #010101; */
+}
+input[type=range]::-webkit-slider-thumb {
+  /* box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; */
+  /* border: 1px solid #000000; */
+  height: 44px;
+  width: 46px;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 3px;
+  background: url('../public/assets/images/requirements/slider.svg');
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -18px;
+
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #745FEA;
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 3px;
+  cursor: pointer;
+/*   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; */
+  /* background: #5f27cd; */
+  border-radius: 1.3px;
+/*   border: 0.2px solid #010101; */
+}
+input[type=range]::-moz-range-thumb {
+  /* box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; */
+/*   border: 1px solid #000000; */
+  height: 55px;
+  width: 55px;
+  border-radius: 50%;
+  background: #ffffff;
+  cursor: pointer;
+/* 	z-index: 2;
+	position: relative; */
+opacity: 0;	
+	
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+/*   border-width: 16px 0; */
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #2a6495;
+  /* border: 0.2px solid #010101; */
+  border-radius: 2.6px;
+  /* box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; */
+}
+input[type=range]::-ms-fill-upper {
+/*   background: #000; */
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-ms-thumb {
+  /* box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; */
+  /* border: 1px solid #000000; */
+  height: 31px;
+  width: 31px;
+  border-radius: 3px;
+  background: #01a3a4;
+  cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #000;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #367ebd;
+}
