--- a/styles/globals.css
+++ b/styles/globals.css
@@ -142,6 +142,9 @@ input::-webkit-inner-spin-button {
 .shadow-input{
  background: url('../public/assets/images/landing/input.svg');
 }
+.shadow-product{
+  background: url('../public/assets/images/requirements/productInput.svg');
+ }
 .shadow-input2{
   background: url('../public/assets/images/landing/input2.svg');
  }
@@ -206,15 +209,15 @@ input::-webkit-inner-spin-button {
 .bg-checkbox{
   background: url('../public/assets/images/requirements/checkbox.svg');
 }
-input[type=range] {
+#range {
   -webkit-appearance: none;
   width: 100%;
 	position: relative;
 }
-input[type=range]:focus {
+#range:focus {
   outline: none;
 }
-input[type=range]::-webkit-slider-runnable-track {
+#range::-webkit-slider-runnable-track {
   width: 100%;
   height: 8.4px;
   cursor: pointer;
@@ -223,7 +226,7 @@ input[type=range]::-webkit-slider-runnable-track {
   border-radius: 10px;
   /* border: 0.2px solid #010101; */
 }
-input[type=range]::-webkit-slider-thumb {
+#range::-webkit-slider-thumb {
   /* box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; */
   /* border: 1px solid #000000; */
   height: 44px;
@@ -237,10 +240,10 @@ input[type=range]::-webkit-slider-thumb {
   margin-top: -18px;
 
 }
-input[type=range]:focus::-webkit-slider-runnable-track {
+#range:focus::-webkit-slider-runnable-track {
   background: #745FEA;
 }
-input[type=range]::-moz-range-track {
+#range[type=range]::-moz-range-track {
   width: 100%;
   height: 3px;
   cursor: pointer;
@@ -249,7 +252,7 @@ input[type=range]::-moz-range-track {
   border-radius: 1.3px;
 /*   border: 0.2px solid #010101; */
 }
-input[type=range]::-moz-range-thumb {
+#range::-moz-range-thumb {
   /* box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; */
 /*   border: 1px solid #000000; */
   height: 55px;
@@ -262,7 +265,7 @@ input[type=range]::-moz-range-thumb {
 opacity: 0;	
 	
 }
-input[type=range]::-ms-track {
+#range::-ms-track {
   width: 100%;
   height: 8.4px;
   cursor: pointer;
@@ -271,19 +274,19 @@ input[type=range]::-ms-track {
 /*   border-width: 16px 0; */
   color: transparent;
 }
-input[type=range]::-ms-fill-lower {
+#range::-ms-fill-lower {
   background: #2a6495;
   /* border: 0.2px solid #010101; */
   border-radius: 2.6px;
   /* box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; */
 }
-input[type=range]::-ms-fill-upper {
+#range::-ms-fill-upper {
 /*   background: #000; */
   border: 0.2px solid #010101;
   border-radius: 2.6px;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
 }
-input[type=range]::-ms-thumb {
+#range::-ms-thumb {
   /* box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; */
   /* border: 1px solid #000000; */
   height: 31px;
@@ -292,9 +295,47 @@ input[type=range]::-ms-thumb {
   background: #01a3a4;
   cursor: pointer;
 }
-input[type=range]:focus::-ms-fill-lower {
+#range:focus::-ms-fill-lower {
   background: #000;
 }
-input[type=range]:focus::-ms-fill-upper {
+#range:focus::-ms-fill-upper {
   background: #367ebd;
 }
+.radio{
+  font: inherit;
+  /* color: #1B1B1B; */
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.15em solid white;
+  background: white;
+  border-radius: 50%;
+  transform: translateY(-0.075em);
+  display: grid;
+  place-content: center;
+}
+.radio::before {
+  content: "";
+  width: 1em;
+  height: 1em;
+  
+  border-radius: 50%;
+  transition: 120ms transform ease-in-out;
+  transform: scale(0.95);
+  border: 0.15em solid #1B1B1B;
+  border-radius: 100%;
+
+
+}
+.radio:checked::before {
+  box-shadow: inset 1em 1em #FFA31A;
+  
+  transform: scale(1);
+}
+.product-shadow{ box-shadow: inset  4px 4px 4px 3px black;}
+.radio:checked{
+  background: #1B1B1B;
+  
+  border: 0.15em solid #FFA31A;
+
+}
+
